--- a/app2/package.json
+++ b/app2/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "craco-plugin-single-spa-application": "^1.0.4",
     "single-spa-react": "^4.1.0"
   }
 }
